# xpendit-expense-engine

./: .env.example  .gitignore  ANALISIS.md  README.md  policy.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  setup.sh
.claude/agents/: README.md  guardian-arquitectura.md  qa-y-pruebas.md  revisor-de-reglas.md
.claude/skills/exponer-api/: SKILL.md
.claude/skills/nueva-anomalia/: SKILL.md
.claude/skills/nueva-regla/: SKILL.md
.claude/skills/nuevo-provider/: SKILL.md
.claude/skills/preparar-proyecto/: SKILL.md
.github/workflows/: ci.yml
Desafío técnico — Xpendit/: gastos_historicos.csv
docs/: 00-overview.md  01-parte1-rules-engine.md  02-parte2-exchange-api.md  03-parte3-batch-analyzer.md  04-csv-data-notes.md  05-deliverables.md  06-decisiones.md  07-escalabilidad.md  08-extras-iniciativa.md  ARQUITECTURA.md  README.md
src/expense_engine/api/: app.py
src/expense_engine/application/: anomalies.py  batch_analyzer.py  normalizer.py  ports.py
src/expense_engine/cli/: analyze.py
src/expense_engine/domain/: engine.py  models.py  resolver.py
src/expense_engine/domain/rules/: _template.py  age.py  base.py  category_limit.py  cost_center.py  registry.py
src/expense_engine/infrastructure/: config.py
src/expense_engine/infrastructure/csv/: reader.py
tests/: helpers.py
tests/api/: test_app.py
tests/application/: test_anomalies.py  test_batch_analyzer.py  test_normalizer.py
tests/domain/: test__template_rule.py  test_age_rule.py  test_category_limit_rule.py  test_cost_center_rule.py  test_engine.py  test_resolver.py
tests/infrastructure/: test_config.py  test_csv_reader.py  test_fallback_provider.py  test_mock_provider.py  test_openexchange_client.py
(+3 files in other folders)
