[project]
name = "expense-engine"
version = "0.1.0"
description = "Motor de Reglas de Gastos — Xpendit (desafío técnico)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.350",
    "responses>=0.25",
]
# Extra por iniciativa propia (fuera del alcance del desafío): scaffold de API HTTP.
# Ver docs/08-extras-iniciativa.md. No es requerido para las Partes 1–3.
api = [
    "fastapi>=0.110",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
